[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/HUD/1-4.png" type="Texture2D" id=1]
[ext_resource path="res://Sprites/Armas/Pico/picoprueba.png" type="Texture2D" id=2]
[ext_resource path="res://Sprites/Menus/new_theme.tres" type="Theme" id=3]
[ext_resource path="res://Sprites/Mejoras/Luck-PNG-HD.png" type="Texture2D" id=4]
[ext_resource path="res://Sprites/Mejoras/ironpaws.png" type="Texture2D" id=5]
[ext_resource path="res://Sprites/Menus/1787_Brasher_Doubloon_(obverse)_transparent_background.png" type="Texture2D" id=6]
[ext_resource path="res://Sprites/Objetos/Experiencia.png" type="Texture2D" id=7]
[ext_resource path="res://Sprites/Menus/4490850.png" type="Texture2D" id=8]
[ext_resource path="res://Scripts/EstadisticasView.gd" type="Script" id=9]
[ext_resource path="res://Sprites/Armas/Ametralladora/Ametralladora.png" type="Texture2D" id=10]
[ext_resource path="res://Sprites/Armas/Sniper/Sniper.png" type="Texture2D" id=11]
[ext_resource path="res://Sprites/Armas/LanzaLlamas/LanzallamasPNG.png" type="Texture2D" id=12]
[ext_resource path="res://Sprites/Armas/BobinaTesla/Bobina.png" type="Texture2D" id=13]
[ext_resource path="res://Sprites/Mejoras/4dabloons.png" type="Texture2D" id=14]

[node name="EstadisticasView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="PopupPanel" type="Label" parent="."]
offset_left = -1.0
offset_top = 31.0
offset_right = 150.0
offset_bottom = 62.0
scale = Vector2( 0.75, 0.75 )

[node name="FPS" type="Label" parent="PopupPanel"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = 926.333
offset_top = -10.6667
offset_right = 1173.33
offset_bottom = 25.3333
text = "FPS:"

[node name="value" type="Label" parent="PopupPanel/FPS"]
anchor_left = 0.202
anchor_top = -0.03
anchor_right = 0.882
anchor_bottom = 0.972
offset_left = 0.106003
offset_top = 0.08
offset_right = -0.0235748
offset_bottom = 0.00799942
text = "0"

[node name="VelMov" type="Label" parent="PopupPanel"]
offset_left = 24.0
offset_top = 90.0
offset_right = 167.0
offset_bottom = 113.0
text = "Velocidad: "
autowrap = true

[node name="value" type="Label" parent="PopupPanel/VelMov"]
offset_left = 118.0
offset_right = 303.0
offset_bottom = 26.0
text = "0"
autowrap = true

[node name="Suerte" type="Label" parent="PopupPanel"]
offset_left = 25.0
offset_top = 65.0
offset_right = 168.0
offset_bottom = 88.0
text = "Suerte:"
autowrap = true

[node name="value" type="Label" parent="PopupPanel/Suerte"]
offset_left = 82.0
offset_right = 343.0
offset_bottom = 26.0
text = "0"
autowrap = true

[node name="ExpRango" type="Label" parent="PopupPanel"]
offset_left = 24.0
offset_top = 42.0
offset_right = 167.0
offset_bottom = 65.0
text = "Rango:"
autowrap = true

[node name="value" type="Label" parent="PopupPanel/ExpRango"]
offset_left = 72.0
offset_top = 1.0
offset_right = 295.0
offset_bottom = 27.0
text = "0"
autowrap = true

[node name="Damage" type="Label" parent="PopupPanel"]
offset_left = 21.0
offset_top = 20.0
offset_right = 109.0
offset_bottom = 43.0
text = "Damage:"
align = 1
valign = 1
autowrap = true

[node name="value" type="Label" parent="PopupPanel/Damage"]
offset_left = 101.0
offset_right = 301.0
offset_bottom = 26.0
text = "0"
autowrap = true

[node name="x" type="Label" parent="PopupPanel/Damage"]
offset_left = 86.0
offset_right = 126.0
offset_bottom = 26.0
text = "x"

[node name="Vida" type="Label" parent="PopupPanel"]
offset_left = 24.0
offset_top = -2.0
offset_right = 167.0
offset_bottom = 21.0
text = "Vida:"
autowrap = true

[node name="value" type="Label" parent="PopupPanel/Vida"]
offset_left = 58.0
offset_top = -1.0
offset_right = 265.0
offset_bottom = 25.0
text = "0"
autowrap = true

[node name="moneda" type="Sprite2D" parent="PopupPanel"]
position = Vector2( 12, 154 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 6 )

[node name="Mobis" type="Sprite2D" parent="PopupPanel"]
position = Vector2( 9.5, 105 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 5 )

[node name="Picoprueba" type="Sprite2D" parent="PopupPanel"]
position = Vector2( 12, 32 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 2 )

[node name="Corazon" type="Sprite2D" parent="PopupPanel"]
position = Vector2( 11, 10 )
texture = ExtResource( 1 )

[node name="Experiencia" type="Sprite2D" parent="PopupPanel"]
position = Vector2( 11, 54 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 7 )

[node name="Luck-Png-Hd" type="Sprite2D" parent="PopupPanel"]
position = Vector2( 11, 79 )
scale = Vector2( 0.015, 0.015 )
texture = ExtResource( 4 )

[node name="Regen" type="Sprite2D" parent="PopupPanel"]
position = Vector2( 11, 129 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 8 )

[node name="Regeneracion" type="Label" parent="PopupPanel"]
offset_left = 24.0
offset_top = 115.0
offset_right = 167.0
offset_bottom = 138.0
text = "Regeneracion:"

[node name="value" type="Label" parent="PopupPanel/Regeneracion"]
offset_left = 154.0
offset_right = 319.0
offset_bottom = 26.0
text = "0"
autowrap = true

[node name="Monedas" type="Label" parent="PopupPanel"]
offset_left = 27.0
offset_top = 141.0
offset_right = 170.0
offset_bottom = 164.0
text = "Monedas:"

[node name="value" type="Label" parent="PopupPanel/Monedas"]
offset_left = 93.0
offset_right = 297.0
offset_bottom = 26.0
text = "0"

[node name="Armas" type="Label" parent="PopupPanel"]
offset_left = 992.0
offset_top = 42.6667
offset_right = 1232.0
offset_bottom = 68.6667
text = "	Armas:"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/Armas"]
anchor_left = 0.267
anchor_top = 1.423
anchor_right = 0.8
anchor_bottom = 19.692
offset_left = -0.0800781
offset_top = 25.0
offset_right = -0.0800781
offset_bottom = -4.99805
grow_horizontal = 0
theme_override_constants/separation = 100

[node name="Pico" type="Control" parent="PopupPanel/Armas/VBoxContainer"]
offset_right = 127.0
pivot_offset = Vector2( 53.3334, 0.333328 )

[node name="Pico" type="Sprite2D" parent="PopupPanel/Armas/VBoxContainer/Pico"]
position = Vector2( 53.333, 4.00195 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="lvl" type="Label" parent="PopupPanel/Armas/VBoxContainer/Pico"]
offset_left = 14.6668
offset_top = 0.00196838
offset_right = 54.6668
offset_bottom = 26.002
text = "1"

[node name="Gun" type="Control" parent="PopupPanel/Armas/VBoxContainer"]
offset_top = 100.0
offset_right = 127.0
offset_bottom = 100.0
pivot_offset = Vector2( 53.3334, 0 )

[node name="Sprite2D" type="Sprite2D" parent="PopupPanel/Armas/VBoxContainer/Gun"]
position = Vector2( 64, -21.3314 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 10 )

[node name="lvl" type="Label" parent="PopupPanel/Armas/VBoxContainer/Gun"]
offset_left = 10.6668
offset_top = -5.33139
offset_right = 50.6668
offset_bottom = 20.6686
text = "1"

[node name="ammoMax" type="Label" parent="PopupPanel/Armas/VBoxContainer/Gun"]
offset_left = 98.6667
offset_top = -5.33139
offset_right = 134.667
offset_bottom = 20.6687
text = "800"
align = 1
valign = 1

[node name="signo" type="Label" parent="PopupPanel/Armas/VBoxContainer/Gun"]
offset_left = 85.3334
offset_top = -5.33139
offset_right = 97.3334
offset_bottom = 20.6687
text = "/"
align = 1
valign = 1

[node name="ammo" type="Label" parent="PopupPanel/Armas/VBoxContainer/Gun"]
offset_left = 49.3334
offset_top = -5.33139
offset_right = 89.3334
offset_bottom = 20.6687
text = "800"

[node name="sniper" type="Control" parent="PopupPanel/Armas/VBoxContainer"]
offset_top = 200.0
offset_right = 127.0
offset_bottom = 200.0
pivot_offset = Vector2( 53.3334, 0 )

[node name="Sprite2D" type="Sprite2D" parent="PopupPanel/Armas/VBoxContainer/sniper"]
position = Vector2( 53.3335, 0 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )

[node name="lvl" type="Label" parent="PopupPanel/Armas/VBoxContainer/sniper"]
offset_left = 10.6667
offset_top = 1.52588e-05
offset_right = 50.6667
offset_bottom = 26.0
text = "1"

[node name="ammo" type="Label" parent="PopupPanel/Armas/VBoxContainer/sniper"]
offset_left = 49.0
offset_top = -1.0
offset_right = 85.0
offset_bottom = 25.0
text = "800"

[node name="signo" type="Label" parent="PopupPanel/Armas/VBoxContainer/sniper"]
offset_left = 85.3334
offset_top = -0.664703
offset_right = 98.3334
offset_bottom = 25.3353
text = "/"

[node name="ammomax" type="Label" parent="PopupPanel/Armas/VBoxContainer/sniper"]
offset_left = 96.0
offset_top = -0.664703
offset_right = 136.0
offset_bottom = 25.3353
text = "800"

[node name="lanzallamas" type="Control" parent="PopupPanel/Armas/VBoxContainer"]
offset_top = 300.0
offset_right = 127.0
offset_bottom = 300.0
pivot_offset = Vector2( 50.3334, 239 )

[node name="lvl" type="Label" parent="PopupPanel/Armas/VBoxContainer/lanzallamas"]
offset_left = 10.6667
offset_top = -1.33334
offset_right = 50.6667
offset_bottom = 24.6667
text = "1"

[node name="signo" type="Label" parent="PopupPanel/Armas/VBoxContainer/lanzallamas"]
offset_left = 79.0
offset_top = -1.0
offset_right = 92.0
offset_bottom = 25.0
text = "/"

[node name="ammo" type="Label" parent="PopupPanel/Armas/VBoxContainer/lanzallamas"]
offset_left = 42.6667
offset_top = -1.33139
offset_right = 78.6667
offset_bottom = 24.6686
text = "800"

[node name="Sprite2D" type="Sprite2D" parent="PopupPanel/Armas/VBoxContainer/lanzallamas"]
show_behind_parent = true
position = Vector2( 53.3335, 0.00195312 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 12 )

[node name="ammomax" type="Label" parent="PopupPanel/Armas/VBoxContainer/lanzallamas"]
offset_left = 92.0
offset_top = -1.33139
offset_right = 132.0
offset_bottom = 24.6686
text = "800"

[node name="BobinaTesla" type="Control" parent="PopupPanel/Armas/VBoxContainer"]
offset_top = 400.0
offset_right = 127.0
offset_bottom = 400.0
pivot_offset = Vector2( 50.3334, 341.667 )

[node name="Sprite2D" type="Sprite2D" parent="PopupPanel/Armas/VBoxContainer/BobinaTesla"]
position = Vector2( 50.6665, -1.3313 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 13 )

[node name="lvl" type="Label" parent="PopupPanel/Armas/VBoxContainer/BobinaTesla"]
offset_left = 10.6667
offset_top = 16.0
offset_right = 50.6667
offset_bottom = 42.0
text = "1"

[node name="armaunknown" type="Control" parent="PopupPanel/Armas/VBoxContainer"]
offset_top = 500.0
offset_right = 127.0
offset_bottom = 500.0

[node name="lvl" type="Label" parent="PopupPanel/Armas/VBoxContainer/armaunknown"]
offset_left = 11.0
offset_top = 23.0
offset_right = 28.0
offset_bottom = 78.0
text = "1
"

[node name="ammo" type="Label" parent="PopupPanel/Armas/VBoxContainer/armaunknown"]
offset_left = 53.3334
offset_top = 22.002
offset_right = 89.3334
offset_bottom = 48.002
text = "800"

[node name="Sprite2D" type="Sprite2D" parent="PopupPanel/Armas/VBoxContainer/armaunknown"]
show_behind_parent = true
position = Vector2( 64, 0 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 14 )

[node name="signo" type="Label" parent="PopupPanel/Armas/VBoxContainer/armaunknown"]
offset_left = 89.3334
offset_top = 23.3353
offset_right = 104.333
offset_bottom = 49.3353
text = "/"

[node name="ammomax" type="Label" parent="PopupPanel/Armas/VBoxContainer/armaunknown"]
offset_left = 101.333
offset_top = 23.3353
offset_right = 141.333
offset_bottom = 49.3353
text = "800"

[node name="Estadisticas" type="Label" parent="."]
offset_left = 1.0
offset_top = 4.0
offset_right = 313.0
offset_bottom = 30.0
text = "Estadisticas: (Presione E)"
